Arreglo de los tests para que los pasen todos
